--- a/src/NuSearch.Web/Search/Partials/Results.cshtml
+++ b/src/NuSearch.Web/Search/Partials/Results.cshtml
@@ -46,6 +46,6 @@
 				</div>
 			</div>
 		</div>
-		@*@Html.Partial("Partials/Aggregations", Model)*@
+		@Html.Partial("Partials/Aggregations", Model)
 	</div>
 </div>
