--- a/src/NuSearch.Web/Search/Partials/Results.cshtml
+++ b/src/NuSearch.Web/Search/Partials/Results.cshtml
@@ -40,8 +40,8 @@
 				</div>
 				<div class="table-responsive ">
 					<table class="table table-condensed">
-						@*@Html.Partial("Partials/Sorting", Model)*@
-						@*@Html.Partial("Partials/PageSize", Model)*@
+						@Html.Partial("Partials/Sorting", Model)
+						@Html.Partial("Partials/PageSize", Model)
 					</table>
 				</div>
 			</div>
